--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/desktop__mq.css" />
-    <link rel="stylesheet" href="../styles/tablet__mq.css" />
-    <link rel="stylesheet" href="../styles/mobile__mq.css" />
-    <link rel="stylesheet" href="../styles/globalStyles.css" />
+    <link rel="stylesheet" href="./styles/desktop__mq.css" />
+    <link rel="stylesheet" href="./styles/tablet__mq.css" />
+    <link rel="stylesheet" href="./styles/mobile__mq.css" />
+    <link rel="stylesheet" href="./styles/globalStyles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -24,7 +24,7 @@
           <a href="./index.html"
             ><img
               class="logo__img"
-              src="../public/imgs/Logo.svg"
+              src="./public/imgs/Logo.svg"
               alt="logo-cabecalho"
           /></a>
         </div>
@@ -62,7 +62,7 @@
       <section class="products__section" data-product>
         <div class="text__product">
           <h1 class="linha__title">Star Wars</h1>
-          <a class="link__product" href="./home.html"
+          <a class="link__product" href="./pages/home.html"
             >Ver tudo<i class="fa-solid fa-arrow-right"></i
           ></a>
         </div>
@@ -73,7 +73,7 @@
       <section class="products__section" data-product>
         <div class="text__product">
           <h1 class="linha__title" id="consoles_id">Consoles</h1>
-          <a class="link__product" href="./home.html"
+          <a class="link__product" href="./pages/home.html"
             >Ver tudo <i class="fa-solid fa-arrow-right"></i
           ></a>
         </div>
@@ -84,7 +84,7 @@
       <section class="products__section" data-product>
         <div class="text__product">
           <h1 class="linha__title">Diversos</h1>
-          <a class="link__product" href="./home.html"
+          <a class="link__product" href="./pages/home.html"
             >Ver tudo <i class="fa-solid fa-arrow-right"></i
           ></a>
         </div>
@@ -95,7 +95,7 @@
       <section class="about__container">
         <div class="about__nav__container">
           <div class="about__img__container">
-            <img class="about__img" src="../public/imgs/Logo.svg" alt="logo" />
+            <img class="about__img" src="./public/imgs/Logo.svg" alt="logo" />
           </div>
           <ul class="about__links">
             <li><a href="#">Quem somos nós </a></li>
@@ -131,8 +131,8 @@
     <footer class="rodape">
       <p class="p__rodape">Desenvolvido por Pedro Joaquim 2023 &#169;</p>
     </footer>
-    <script type="module" src="../firebase/firebase.js"></script>
-    <script type="module" src="../services/index-render.js"></script>
-    <script src="../services/send-message.js"></script>
+    <script type="module" src="./firebase/firebase.js"></script>
+    <script type="module" src="./services/index-render.js"></script>
+    <script src="./services/send-message.js"></script>
   </body>
 </html>
